# sql-guide-udemy-jannis-seemann

./: .gitattributes  .gitignore  README.md  db_language_school_bkp.sql
python-postgres/: 01-psycopg.py
python-postgres-psycopg/: 01-psycopg.py  README.md  pyproject.toml  requirements.txt
python-postgres-psycopg/src/: 01-psycopg.py  02-psycopg.py  03-psycopg.py  04-psycopg.py  21-sqlalchemy.py  22-sqlalchemy.py
